<resources>

    <string name="app_name">MyWeather</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="visibility">Visibility</string>
    <string name="ultra_rays">Ultra Rays</string>
    <string name="cloud">Cloud</string>
    <string name="raining">Raining</string>
    <string name="wind">Wind</string>
    <string name="_10rain">10rain</string>
    <string name="_10cloud">10cloud</string>
    <string name="_10uv">10uv</string>
    <string name="_10vi">10vi</string>
    <string name="_10atm">10atm</string>
    <string name="_10wind">10wind</string>
    <string name="_22">22</string>
    <string name="_30">30</string>
    <string name="c">°C</string>
    <string name="_5_11">5:11</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="choose_your_alert_location">Choose your Favorite Location</string>
    <string name="set_alert">Set Alert</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="save">Save</string>
    <string name="notification">Notification</string>
    <string name="units_of_measurment">Units of measurement</string>
    <string name="units_of_tempreture">Units of temperature</string>
    <string name="standard">Fahrenheit</string>
    <string name="metric">Celsius</string>
    <string name="imperial">Kelvin</string>
    <string name="animation_view">Location choice</string>
    <string name="animated">Gps</string>
    <string name="non_animated">Map</string>
    <string name="choose_your_location">Choose your Location</string>
    <string name="lon">Lon :</string>
    <string name="lat">Lat :</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="daily_weather">Daily Weather :</string>
    <string name="hourly_weather">Hourly Weather :</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="close">Close</string>
    <string name="choose_your_favorite_location">Choose your Alert Location</string>
    <string name="weather_is_fine">Weather is fine</string>
    <string name="warning">Warning!!</string>
    <string name="warning_content_favorite">Are you sure you want to delete your favourite item?</string>
    <string name="warning_content_alert">Are you sure you want to delete your Alert ?
    This will cause to disable your Alarm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="now">     Now    </string>
    <string name="avg">Avg :</string>
    <string name="least">Least :</string>
    <string name="top">Top :</string>
    <string name="search_by_city_name">Search By City Name</string>
    <string name="search">Search</string>
    <string name="start">Start :</string>
    <string name="end">End :</string>
    <string name="country">Country :</string>
    <string name="city">City :</string>
    <string name="detail">Detail</string>
    <string name="wind_speed_amp_cloundness"><![CDATA[Wind speed & Cloundness]]></string>
    <string name="description">Description</string>
    <string name="weather_notification">Weather notification</string>
    <string name="warning_alert_draw">Sorry , We can\'t proceed your request as you Draw Over Apps Permission is not granted</string>
    <string name="favorite_toast">Please Connect to internet for using this feature !!</string>
    <string name="home_toast">Please Connect to internet for latest update !!</string>




</resources>