<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:iconTint="@color/black"

            android:title="@string/home"/>
        <item
            android:id="@+id/nav_fav"
            android:iconTint="@color/black"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_baseline_add_alarm_24"
            android:iconTint="@color/black"

            android:title="@string/alarm"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:iconTint="@color/black"

            android:title="@string/search"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:iconTint="@color/black"

            android:title="@string/settings"/>



    </group>

</menu>